[gd_scene load_steps=2 format=3 uid="uid://dqwyjcgb0naqo"]

[ext_resource type="Script" path="res://scripts/settings_list.gd" id="1_mah44"]

[node name="SettingsList" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -123.0
offset_right = 122.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
script = ExtResource("1_mah44")

[node name="SoundContainer" type="ColorRect" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="SoundContainer"]
custom_minimum_size = Vector2(75, 30)
layout_direction = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 95.0
offset_bottom = 15.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Sounds:"

[node name="Toggle" type="Button" parent="SoundContainer"]
layout_direction = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 22
toggle_mode = true
text = "on"

[node name="BGMusicContainer" type="ColorRect" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="BGMusicContainer"]
custom_minimum_size = Vector2(75, 30)
layout_direction = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.0
offset_right = 95.0
offset_bottom = 15.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "BG Music:"

[node name="Toggle" type="Button" parent="BGMusicContainer"]
layout_direction = 2
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 22
toggle_mode = true
text = "on"

[connection signal="toggled" from="SoundContainer/Toggle" to="." method="_on_sounds_toggle_toggled"]
[connection signal="toggled" from="BGMusicContainer/Toggle" to="." method="_on_bg_music_toggle_toggled"]
